-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Component/s: Win32SS
-
Labels:
-
Environment:
Operating System: ReactOS
Platform: x86 Hardware
-
Module:
-
Guilty Revision:47,264
-
External URL:
-
External issue ID:5696
Created an attachment (id=5423)
Screenshot of what Task Manager looks like when maximized (Boot CD r49278 <release>)
The task manager title bar will disappear when the window is maximized. Restoring it works only by right-clicking on the start menu and clicking "Restore" in the popup menu.
To reproduce:
1. Open Task Manager
2. Maximize it
3. The title bar will disappear, and the menu bar will appear on the top where the title bar should be instead.
Note that at this stage the bug has only been able to be seen in task manager.
- duplicates
-
CORE-141 maximizing does not consider taskbar
-
- Resolved
-
- is blocked by
-
CORE-15893 Most of maximized windows have extra row of pixels around
-
- Resolved
-
- is duplicated by
-
CORE-5678 maximized taskmgr lost title bar and is bigger then desktop area
-
- Resolved
-
-
CORE-10329 Task Manager maximise goes beyond desktop
-
- Resolved
-
-
CORE-11726 Improperly working expand to full screen "Task Manager"
-
- Resolved
-
-
CORE-15039 Bulk Rename Utility - No titlebar when maximized
-
- Resolved
-
-
CORE-15500 TASKMGR.EXE: Maximizing the Task Manager window causes the title bar to disappear.
-
- Resolved
-
- relates to
-
CORE-6651 Broken window z-ordering
-
- In Progress
-