[Win32SS] Fix maximized window positioning.

Fix CORE-5177 TaskMgr and ProcExp possionong when maximized.