win32ss/user/user32/windows/winpos.c
@@ -22,6 +22,7 @@ void mirror_rect( const RECT *window_rect, RECT *rect )
 
 /* FUNCTIONS *****************************************************************/
 
+#if 0 // Keep legacy code. Moved to Win32k:NtUser:WinPos.c.
 #define EMPTYPOINT(pt) ((pt).x == -1 && (pt).y == -1)
 
 UINT WINAPI
@@ -126,9 +127,9 @@ WinPosGetMinMaxInfo(HWND hwnd, POINT* maxSize, POINT* maxPos,
     if (minTrack) *minTrack = MinMax.ptMinTrackSize;
     if (maxTrack) *maxTrack = MinMax.ptMaxTrackSize;
 
-  return 0; //FIXME: what does it return?
+  return 0; //FIXME: what does it return? Wine returns MINMAXINFO.
 }
-
+#endif
 
 /*
  * @implemented
